<resources>
    <string name="app_name">Food Network</string>
    <string name="food_network">Food Network</string>
    <string name="log_in">Log In</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign Up now</string>
    <string name="name">Name</string>
    <string name="mobile_number_10_digit">Mobile Number(10 digit)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_character">Password(Min. 4 character)</string>
    <string name="new_password_min_4_character">New Password(Min. 4 character)</string>
    <string name="register">Register</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="next">Next</string>
    <string name="enter_the_recived_otp_below">Enter the received OTP below:</string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="my_profile">My Profile</string>
    <string name="favourite_restaurants">Favourite Restaurants</string>
    <string name="order_history">Order history</string>
    <string name="faqs">FAQs</string>
    <string name="log_out">Log Out</string>
    <string name="open_drawer">open drawer</string>
    <string name="close_drawer">close drawer</string>
    <string name="empty_cart">Your cart is currently empty</string>
    <string name="no_favorites">You do not have any favorite restaurants</string>
    <string name="no_orders">You haven\'t placed any orders yet</string>
    <string name="preference_file_name">Login Preferences</string>

    <string name="faq_answer_one">A.1 You will be taught using pre-recorded videos and text tutorials. The training has
        quizzes, assignments, and tests to help you learn better. At the end of the training, you will attempt a project
        to get hands-on practice of what you learn during your training.
    </string>
    <string name="faq_answer_two">A.2 As this is a purely online training program, you can choose to learn at any time
        of the day. We will recommend a pace to be followed throughout the program, but the actual timings and learning
        hours can be decided by students according to their convenience.
    </string>
    <string name="faq_answer_four">A.4 We recommend spending 10-12 hours per week. However, the actual learning hours
        can be decided by you as per your convenience.
    </string>
    <string name="faq_answer_three">A.3 The training duration is of 6 weeks.</string>
    <string name="faq_answer_five">A.5 You can choose your preferred batch date while signing up for the training
        program.
    </string>
    <string name="faq_answer_six">A.6 You will be able to download the certificate once you complete your training and
        take the final test.
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
</resources>
