<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.ForgotPage"
    android:background="@color/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/logo" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_registered_mobile_number_and_email_below"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:hint="@string/mobile_number_10_digit"
            android:drawableLeft="@drawable/ic_phone"
            android:id="@+id/mobileNo"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:id="@+id/email"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:drawableLeft="@drawable/ic_email"
            android:textStyle="italic"
            android:background="@drawable/text_boundry_background"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="35dp"
            android:text="@string/next"
            android:id="@+id/next"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:background="@drawable/button_boundry_background"
            />
    </LinearLayout>>
</RelativeLayout>