<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.RegistrationPage"
    android:background="@color/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:padding="10dp"
>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="20dp"
            android:hint="@string/name"
            android:id="@+id/name"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:drawableLeft="@drawable/ic_person"
            android:background="@drawable/text_boundry_background"
            android:inputType="textPersonName"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="@string/email"
            android:id="@+id/email"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:drawableLeft="@drawable/ic_email"
            android:textStyle="italic"
            android:background="@drawable/text_boundry_background"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="@string/mobile_number_10_digit"
            android:drawableLeft="@drawable/ic_phone"
            android:id="@+id/mobileNo"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="@string/delivery_address"
            android:drawableLeft="@drawable/ic_address"
            android:id="@+id/deliveryAddress"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:inputType="textPostalAddress"
            android:maxLines="3"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="@string/password_min_4_character"
            android:drawableLeft="@drawable/ic_password"
            android:id="@+id/password"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="Confirm Password"
            android:drawableLeft="@drawable/ic_password"
            android:id="@+id/passconfirmf"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:inputType="textPassword"
            android:maxLines="1"
            android:drawableStart="@drawable/ic_password" />

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:text="@string/register"
        android:id="@+id/register"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:background="@drawable/button_boundry_background"
        />
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordinatorLayout">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorAccent"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        /></androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>