<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activites.ResetPasswordPage"
    android:background="@color/background"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_recived_otp_below"
            android:layout_marginTop="12dp"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:hint="OTP"
            android:id="@+id/OTP"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:maxLines="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="@string/new_password_min_4_character"
            android:drawableLeft="@drawable/ic_password"
            android:id="@+id/newPassword"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp"
            android:hint="Confirm Password"
            android:drawableLeft="@drawable/ic_password"
            android:id="@+id/confirmPassword"
            android:textSize="20sp"
            android:textColor="#000"
            android:padding="5dp"
            android:background="@drawable/text_boundry_background"
            android:inputType="textPassword"
            android:maxLines="1"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="35dp"
            android:text="@string/submit"
            android:id="@+id/Submit"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:background="@drawable/button_boundry_background"
            />
    </LinearLayout>

</RelativeLayout>